# Memtext

./: .coverage  .gitattributes  .gitignore  .ruff.toml  AGENTS.md  LICENSE  README.md  cli_help.txt  emcubed_forensic_bridge.py  git_status_output.txt  pyproject.toml  research Dreams.md  sample_events.json  scratchpad implementation.md  spec.md  test_output.json
.github/: dependabot.yml
.github/workflows/: ci.yml
.kilo/plans/: 1776253581999-stellar-orchid.md
.kilo/skills/memtext-repository-updater/: SKILL.md
docs/: postgres.md
docs/plans/: 2026-04-10-memtext-v0.2.0-implementation.md
docs/specs/: 2026-04-10-memtext-v0.2.0-design.md
scripts/: memtext-dream.service  memtext-dream.timer
src/memtext/: __init__.py  api.py  artifacts.py  cli.py  collaboration.py  core.py  db.py  encryption.py  graph.py  llm.py  logging_config.py  memory_logic.py  models.py  prolog_memory.py  reflection.py  skills.py  sync.py
src/memtext/repositories/: backups.py  database.py  migrations.py  postgres.py  projects.py  reminders.py  templates.py  webhooks.py
tests/: test_core.py  test_db.py  test_memory_logic.py  test_reflection.py  test_skills.py  test_synthesis.py  test_uncovered.py  test_v060_features.py
